--- a/Escc.EastSussexGovUK.TemplateSource/css/small.css
+++ b/Escc.EastSussexGovUK.TemplateSource/css/small.css
@@ -318,8 +318,8 @@ a.keyboard:focus, a.keyboard:active { position: absolute; top: 0; left: 0; clip:
 #search .term-outer { float: left; margin-right: -56px; width: 100%; }
 #search .term-inner { padding-right: 56px; }
 
-#search .search { border: 0 solid #fff; border-radius: 3px; height: 19px; margin: 6px 0; width: 100%; min-width: 80px; }
-#search .submit input { border: 0 solid #00a1de; border-radius: 3px; margin: 4px 0 7px 8px; padding: 2px 8px; color: #fff; font-weight: bold; background: #00a1de; }
+#search .search { border: none; border-radius: 3px; height: 19px; margin: 6px 0; width: 100%; min-width: 80px; }
+#search .submit input { border: none; border-radius: 3px; margin: 4px 0 7px 8px; padding: 2px 8px; color: #1e5b83; font-weight: bold; background: #fff; }
 
 /* The breadcrumb trail overlaps the autocomplete suggestions for search, so bring them forward */
 .ui-autocomplete { z-index: 100!important; }
